Bug 94627 - FILEOPEN: CALC do not recognise cell names on .xlsb files
Summary: FILEOPEN: CALC do not recognise cell names on .xlsb files
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:26.2.0 target:25.8.1
Keywords: bibisected, regression
Depends on:
Blocks: Cell-Name
  Show dependency treegraph
 
Reported: 2015-09-30 00:30 UTC by Ismael Cedillo
Modified: 2025-08-14 07:55 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
the same file using named cells saved in some Excel formats. The reading cell names in .xlsb fails. (22.88 KB, application/zip)
2015-09-30 00:30 UTC, Ismael Cedillo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ismael Cedillo 2015-09-30 00:30:16 UTC
Created attachment 119129 [details]
the same file using named cells saved in some Excel formats. The reading cell names in .xlsb fails.

When open a file .xlsb (MSExcel binary format) type which contains named cells, present an Err:520 in the cells.

This behavior is present in Linux-Mint 64 bits for two libreoffice versions:

Version: 5.1.0.0.alpha1+
Build ID: 006d30b1a29e2c471a96c0f4658beea8cb86b338

and

Version: 5.0.3.0.0+
Build ID: ce75966ae16381353fe75f9df2f56d03b8861cd5

Attached you can find a zip file which contains the same file saved in 3 formats: .xls, .xlsx and .xlsb... the error only is present to open the .xlsb file.
Comment 1 raal 2015-10-01 16:36:07 UTC
I can confirm with Version: 5.1.0.0.alpha1+
Build ID: 83ef294dddf3b1ab5cd5f91a792a7d9413a08f1f
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-09-20_07:00:46
and 4.4.2.2

Works OK in excel2010.
Comment 2 QA Administrators 2016-11-08 10:28:05 UTC Comment hidden (obsolete)
Comment 3 QA Administrators 2019-12-03 14:47:59 UTC Comment hidden (obsolete)
Comment 4 QA Administrators 2021-12-03 04:40:30 UTC Comment hidden (obsolete)
Comment 5 dfbz 2022-04-01 09:52:42 UTC
This is affecting me also, bug still present in 7.3.

Version: 7.3.0.3 / LibreOffice Community
Build ID: 0f246aa12d0eee4a0f7adcefbf7c878fc2238db3
CPU threads: 8; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 6 Buovjaga 2023-12-11 18:02:37 UTC
Err:520 started happening in this range (bibisected with Linux 43all): https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=8638f1e72a3fe830c0e8dcc1bd847d4fb9e599ee..e19f1afb2c253944968f85b963934a60b87f472a

In Manage Names, the ranges went blank in c43a25a7268c1b6ab81e9ba694a1f22223a24afa
replace import with direct ScCompiler calls, related tdf#91367

Bibisected with Linux 50max.
Comment 7 Markus Mohrhard 2025-08-12 15:19:11 UTC
The import of the named range entry got fixed as part of tdf#151505

I'm still trying to understand the Err:520 problem.
Comment 8 Markus Mohrhard 2025-08-12 20:19:31 UTC
The second issue was caused by https://cgit.freedesktop.org/libreoffice/core/commit/?id=0bb0937b65200382d3d8ad8f36472067ff0cbb40

I have put a fix up for review but will wait to see if Eike wants to have a look at the PR.
Comment 9 Commit Notification 2025-08-13 12:31:31 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/36c711b6c51ebf0499670453488b59279afa9011

tdf#94627: handle range name references in formulas during XLSB import

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-08-14 07:55:41 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/96cca31589adf074326bbb610c7f0841d05e1420

tdf#94627: handle range name references in formulas during XLSB import

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.